// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnDemand Radio Page  should match snapshot for AMP 1`] = `
<html
  amp=""
  dir="rtl"
  lang="ps"
>
  <head>
    <title>
      وروستي خبرونه - BBC News پښتو
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="http://localhost:7080/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News پښتو"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News پښتو"
      name="application-name"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      property="og:image"
    />
    <meta
      content="BBC News پښتو"
      property="og:image:alt"
    />
    <meta
      content="ps"
      property="og:locale"
    />
    <meta
      content="BBC News پښتو"
      property="og:site_name"
    />
    <meta
      content="وروستي خبرونه - BBC News پښتو"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcpashto"
      name="twitter:creator"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      name="twitter:description"
    />
    <meta
      content="BBC News پښتو"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcpashto"
      name="twitter:site"
    />
    <meta
      content="وروستي خبرونه - BBC News پښتو"
      name="twitter:title"
    />
  </head>
  <body>
    .c3 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c8 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c5 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(6/8*(100% - 8 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    margin-right: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/20*(100% - 20 * 1rem) + 11 * 1rem );
    margin: 0 0.5rem;
    margin-right: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c7 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c8 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c8 {
    padding: 1rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div>
      <amp-analytics>
        <script
          type="application/json"
        >
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=68&p=pashto.bbc_pashto_radio.w172x8nvf4bchz5.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:pips:w172x8nvf4bchz5]&x2=[amp]&x3=[news-pashto]&x4=[ps]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-ondemand]&x8=[simorgh]&x9=[وروستي+خبرونه+-+BBC+News+پښتو]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <main
        class="c0 c1"
        dir="rtl"
        role="main"
      >
        <div
          class="c2"
          dir="rtl"
        >
          <h1
            class="c3"
            id="content"
            tabindex="-1"
          >
            وروستي خبرونه
          </h1>
          <p
            class="c4"
          >
            04/02/2020 GMT
          </p>
          <p
            class="c4"
          >
            د نړۍ وروستي خبرونه
          </p>
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c7"
              >
                <strong
                  class="c8"
                >
                  دغه فایل نور د لاسرسي وړ نه دی.
                </strong>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`OnDemand Radio Page  should match snapshot for Canonical 1`] = `
.c3 {
  font-size: 2rem;
  line-height: 2.625rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c4 {
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  font-family: "BBC Nassim Pashto",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c8 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c5 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-right: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(6/8*(100% - 8 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    margin-right: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/20*(100% - 20 * 1rem) + 11 * 1rem );
    margin: 0 0.5rem;
    margin-right: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 2.375rem;
    line-height: 2.875rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 2.75rem;
    line-height: 3.375rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1.375rem;
    line-height: 2rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c7 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c8 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c8 {
    padding: 1rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<html
  dir="rtl"
  lang="ps"
>
  <head>
    <title>
      وروستي خبرونه - BBC News پښتو
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.co.uk/pathname.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News پښتو"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News پښتو"
      name="application-name"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/pashto/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      property="og:image"
    />
    <meta
      content="BBC News پښتو"
      property="og:image:alt"
    />
    <meta
      content="ps"
      property="og:locale"
    />
    <meta
      content="BBC News پښتو"
      property="og:site_name"
    />
    <meta
      content="وروستي خبرونه - BBC News پښتو"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcpashto"
      name="twitter:creator"
    />
    <meta
      content="د نړۍ وروستي خبرونه"
      name="twitter:description"
    />
    <meta
      content="BBC News پښتو"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcpashto"
      name="twitter:site"
    />
    <meta
      content="وروستي خبرونه - BBC News پښتو"
      name="twitter:title"
    />
  </head>
  <body>
    <div>
      <noscript />
      <main
        class="c0 c1"
        dir="rtl"
        role="main"
      >
        <div
          class="c2"
          dir="rtl"
        >
          <h1
            class="c3"
            id="content"
            tabindex="-1"
          >
            وروستي خبرونه
          </h1>
          <p
            class="c4"
          >
            04/02/2020 GMT
          </p>
          <p
            class="c4"
          >
            د نړۍ وروستي خبرونه
          </p>
          <div
            class="c5"
          >
            <div
              class="c6"
            >
              <div
                class="c7"
              >
                <strong
                  class="c8"
                >
                  دغه فایل نور د لاسرسي وړ نه دی.
                </strong>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`OnDemand Radio Page  should not show the audio player if it is not available yet 1`] = `
.c3 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c4 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(6/8*(100% - 8 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/20*(100% - 20 * 1rem) + 11 * 1rem );
    margin: 0 0.5rem;
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div>
  <noscript />
  <main
    class="c0 c1"
    dir="ltr"
    role="main"
  >
    <div
      class="c2"
      dir="ltr"
    >
      <h1
        class="c3"
        id="content"
        tabindex="-1"
      >
        BBC 코리아 라디오
      </h1>
      <p
        class="c4"
      >
        2020/03/06 GMT
      </p>
      <p
        class="c4"
      >
        한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
      </p>
    </div>
  </main>
</div>
`;

exports[`OnDemand Radio Page  should show the expired content message if episode is expired 1`] = `
.c3 {
  font-size: 1.75rem;
  line-height: 2rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 700;
  font-style: normal;
  color: #3F3F42;
  display: block;
  margin: 0;
  padding: 2rem 0;
}

.c4 {
  font-size: 1rem;
  line-height: 1.375rem;
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  color: #3F3F42;
  padding-bottom: 1.5rem;
  margin: 0;
}

.c6 {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c7 {
  font-family: "Apple SD Gothic Neo",AppleGothic,"Malgun Gothic",Dotum,"Noto Sans CJK KR",sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  border: 0.0625rem solid transparent;
  color: #FFFFFF;
  background-color: rgba(34,34,34,0.75);
}

.c8 {
  display: block;
  font-weight: normal;
  bottom: 0;
  position: absolute;
  padding: 0.5rem;
  border-bottom: 0.0625rem solid transparent;
}

.c5 {
  position: relative;
  min-height: 165px;
  margin-bottom: 2rem;
}

.c1 {
  width: 100%;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

@supports (display:grid) {
  .c0 {
    display: grid;
    position: initial;
  }
}

@media (max-width:14.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:15rem) and (max-width:24.9375rem) {
  .c2 {
    padding: 0 0.5rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:25rem) and (max-width:37.4375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 0.5rem) + 5 * 0.5rem - 0%);
    margin: 0 0.25rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:37.5rem) and (max-width:62.9375rem) {
  .c2 {
    padding: 0 1rem;
    width: calc(6/6*(100% - 6 * 1rem) + 5 * 1rem - 0%);
    margin: 0 0.5rem;
    margin-left: 0%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c2 {
    width: calc(6/8*(100% - 8 * 1rem) + 5 * 1rem );
    margin: 0 0.5rem;
    margin-left: 12.5%;
    display: inline-block;
    vertical-align: top;
  }
}

@media (min-width:80rem) {
  .c2 {
    width: calc(12/20*(100% - 20 * 1rem) + 11 * 1rem );
    margin: 0 0.5rem;
    margin-left: 20%;
    display: inline-block;
    vertical-align: top;
  }
}

@supports (display:grid) {
  .c2 {
    display: block;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c3 {
    font-size: 2rem;
    line-height: 2.625rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    font-size: 2.75rem;
    line-height: 3.625rem;
  }
}

@media (min-width:37.5rem) {
  .c3 {
    padding: 2.5rem 0;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c4 {
    font-size: 1rem;
    line-height: 1.75rem;
  }
}

@media (min-width:37.5rem) {
  .c7 {
    font-size: 0.875rem;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c7 {
    background-color: transparent;
  }
}

@media screen and (-ms-high-contrast:active) {
  .c8 {
    background-color: window;
  }
}

@media (min-width:25rem) {
  .c8 {
    padding: 1rem;
  }
}

@media (min-width:63rem) and (max-width:79.9375rem) {
  .c1 {
    margin: 0 auto;
    max-width: 63rem;
  }
}

@media (min-width:80rem) {
  .c1 {
    margin: 0 auto;
    max-width: 80rem;
  }
}

<div>
  <noscript />
  <main
    class="c0 c1"
    dir="ltr"
    role="main"
  >
    <div
      class="c2"
      dir="ltr"
    >
      <h1
        class="c3"
        id="content"
        tabindex="-1"
      >
        BBC 코리아 라디오
      </h1>
      <p
        class="c4"
      >
        2020/03/06 GMT
      </p>
      <p
        class="c4"
      >
        한반도와 세계 곳곳의 다양한 소식을 공정하고 객관적으로 전달해 드립니다.
      </p>
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <strong
              class="c8"
            >
              더 이상 이용할 수 없는 콘텐츠입니다.
            </strong>
          </div>
        </div>
      </div>
    </div>
  </main>
</div>
`;
